--- a/tests/Fixtures/app/config/config_common.yml
+++ b/tests/Fixtures/app/config/config_common.yml
@@ -7,6 +7,7 @@ doctrine:
             symfony_uuid: Symfony\Bridge\Doctrine\Types\UuidType
 
     orm:
+        enable_lazy_ghost_objects: true
         auto_generate_proxy_classes: '%kernel.debug%'
         mappings:
             TestBundle:
